src/components/SavedCardsPicker/SavedCardsPickerHeader.module.css
@import '../../style/variable.global.css';

.header {
  align-items: flex-start;
  box-sizing: border-box;
  display: flex;
  height: auto;
  padding: var(--marginSmall);
  margin-left: var(--marginSmall);
  cursor: pointer;
}

@media (--maxMobile) {
  .headerContent {
    flex-direction: column;
  }
}

.headerContent {
  display: flex;
}

.subtitle {
  font-size: var(--fontSizeMedium);
}

.text {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
}

.availableCards {
  align-items: flex-start;
  margin-left: var(--marginMedium);
  display: flex;
}

@media (--maxMobile) {
  .availableCards {
    margin-left: 0;
  }
}

.cardIcon {
  height: 24px;
  margin: 0 4px 0 0;
}

.cardIconSmaller {
  width: var(--marginLarge);
}

.cardIconBigger {
  width: var(--marginXLarge);
}

.cardIconBusinessEdenred {
  height: 24px;
}

